# dl-transformers

./: .gitignore  README.md  VIT.ipynb  pyproject.toml
data_prep/: data_utils.py  dataloader.py  dataset_prep.py  dataset_split.py  del.ipynb  ignore_irrelevant_classes.ipynb  spectrograms.ipynb
experimental/: densenet.ipynb
model/: densenet.ipynb  densenet_utils.py  evaluation.ipynb  model_config.py  model_utils.py  spectrogram_transformer.py  transformer.ipynb
