[project]
name = "dl-transformers"
version = "0.1.0"
description = "Speech commands classification with Transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.0",
    "numpy==2.1.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "lightning>=2.5.0.post0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
