[project]
name = "dl-transformers"
version = "0.1.0"
description = "Speech commands classification with Transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.0",
    "numpy==2.1.2",
    "lightning>=2.5.0.post0",
    "noisereduce>=3.0.3",
    "librosa>=0.11.0",
    "jupyter>=1.1.1",
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "torchaudio==2.6.0+cu124",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
